lilac facade and train class added;

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
         "laravel": {
             "providers": [
                 "Hans\\Lilac\\LilacServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "Lilac": "Hans\\Lilac\\Facades\\LilacFacade"
+            }
         }
     },
     "scripts": {
