--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
     "autoload": {
         "psr-4": {
             "Hans\\Lilac\\": "src/"
-        }
+        },
+        "files": [
+            "src/Helpers/functions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
