--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 /.github export-ignore
 /.run export-ignore
-/.tests export-ignore
-/.xdebug export-ignore
+/tests export-ignore
+/xdebug export-ignore
 .env export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
