--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 .env export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.styleci.yml export-ignore
 CITATION.cff export-ignore
 codecov.yml export-ignore
 docker-compose.yml export-ignore
